--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["bezgin sasha <bezgin.sasha06@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Flask = "^2.0.1"
+pymongo = "^3.11.4"
 
 [tool.poetry.dev-dependencies]
 
