--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["bezgin sasha <bezgin.sasha06@gmail.com>"]
 python = "^3.9"
 Flask = "^2.0.1"
 pymongo = "^3.11.4"
+pyhumps = "^3.0.2"
 
 [tool.poetry.dev-dependencies]
 
