--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Flask = "^2.0.1"
 pymongo = "^3.11.4"
 pyhumps = "^3.0.2"
 loguru = "^0.5.3"
+openpyxl = "^3.0.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
